--- a/.travis.yml
+++ b/.travis.yml
@@ -29,3 +29,16 @@ matrix:
       - cookstyle -D
       - foodcritic --exclude test .
       env: UNIT_AND_LINT=1
+
+before_deploy:
+  - openssl aes-256-cbc -K $encrypted_863b80624658_key -iv $encrypted_863b80624658_iv -in supermarket.pem.enc -out supermarket.pem -d
+
+deploy:
+  provider: chef-supermarket
+  edge: true
+  user_id: redguide
+  client_key: supermarket.pem
+  cookbook_category: Other
+  on:
+    tags: true
+    branch: master
