--- a/.travis.yml
+++ b/.travis.yml
@@ -31,9 +31,10 @@ matrix:
       env: UNIT_AND_LINT=1
 
 before_deploy:
-  - openssl aes-256-cbc -K $encrypted_863b80624658_key -iv $encrypted_863b80624658_iv -in supermarket.pem.enc -out supermarket.pem -d
+  - openssl aes-256-cbc -K $encrypted_f0fa02ba8941_key -iv $encrypted_f0fa02ba8941_iv -in supermarket.pem.enc -out supermarket.pem -d
 
 deploy:
+  skip_cleanup: true
   provider: chef-supermarket
   edge: true
   user_id: redguide
@@ -42,3 +43,4 @@ deploy:
   on:
     tags: true
     branch: master
+    condition: "$UNIT_AND_LINT = 1"
